Fixed too short Header on Summary.html

--- a/css/summaryResponsive.css
+++ b/css/summaryResponsive.css
@@ -1,9 +1,7 @@
 @media(max-width: 1242px){
     .flex-start-respo{
-        width: 100%;
         display: flex;
         justify-content: center;
-        margin-left: 20px;
         margin-top: 100px;
     }
 
@@ -11,7 +9,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        margin-left: 0px;
+        margin-left: 22px;
         margin-top: 0px;
     }
 
@@ -144,10 +142,8 @@
     }
 
     .flex-start-respo{
-        width: 100%;
         display: flex;
         justify-content: flex-start;
-        margin-left: 20px;
         margin-top: 100px;
     }
 
